crates/nash-solve/tests/snapshots/inference__recursive_evidence_growth_through_a_nested_helper_is_rejected.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep 'a => Keep (List 'a) where\n    keep xs = xs\nnest : Keep 'a => 'a -> ()\nnest x =\n    let\n        helper : Keep 'b => 'b -> ()\n        helper y = nest [y]\n    in\n    helper x\n"
---
[
    PolymorphicRecursion {
        region: Region {
            start: Position {
                line: 10,
                column: 20,
            },
            end: Position {
                line: 10,
                column: 24,
            },
        },
        name: "nest",
        trait_: QualifiedName {
            home: ModuleName {
                package: None,
                name: "Main",
            },
            name: "Keep",
        },
        args: [
            Type {
                home: ModuleName {
                    package: Some(
                        PackageName {
                            author: "nash",
                            project: "core",
                        },
                    ),
                    name: "Builtin",
                },
                name: "List",
                args: [
                    RigidVar(
                        "b",
                    ),
                ],
            },
        ],
    },
]
