crates/nash-solve/tests/snapshots/inference__recursive_function.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (forever)\n\nforever x = forever x\n"
---
forever : forall (a : Any) (b : Any). a -> b
