crates/nash-solve/tests/snapshots/inference__recursive_impl_evidence_cannot_grow_from_its_own_given.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep 'a => Keep (List 'a) where\n    keep xs = xs\nnest : Keep 'a => 'a -> ()\nnest x = nest [x]\n"
---
[
    PolymorphicRecursion {
        region: Region {
            start: Position {
                line: 7,
                column: 10,
            },
            end: Position {
                line: 7,
                column: 14,
            },
        },
        name: "nest",
        trait_: QualifiedName {
            home: ModuleName {
                package: None,
                name: "Main",
            },
            name: "Keep",
        },
        args: [
            Type {
                home: ModuleName {
                    package: Some(
                        PackageName {
                            author: "nash",
                            project: "core",
                        },
                    ),
                    name: "Builtin",
                },
                name: "List",
                args: [
                    RigidVar(
                        "a",
                    ),
                ],
            },
        ],
    },
]
