crates/nash-solve/tests/snapshots/inference__reflexive_lift_neither_narrows_types_nor_uses_foreign_identity.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Lift exposing (Lift)\ntrait Lift 'small 'big where\n    lift : 'small -> 'big\n    lower : 'big -> 'small\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\ntype Color = Red\nbad : 'a -> 'b\nbad x = lift x\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\ntype Color = Red\nbad : Color -> Color\nbad x = lift x\n"
info: diagnostic
---
core: true, annotation: 'a -> 'b
nash::type::missing_constraint

  × `lift` requires undeclared constraint `Lift 'a 'b`.
   ╭─[Main.nash:5:9]
 4 │ bad : 'a -> 'b
 5 │ bad x = lift x
   · ─┬─     ──┬─
   ·  │        ╰── constraint required here
   ·  ╰── annotation for `bad`
   ╰────
  help: Add `Lift 'a 'b` to the annotation for `bad`.


core: false, annotation: Color -> Color
nash::type::missing_impl

  × No impl for `Lift Color Color`.
   ╭─[Main.nash:5:9]
 4 │ bad : Color -> Color
 5 │ bad x = lift x
   ·         ──┬─
   ·           ╰── required by `lift`
   ╰────
  help: Import or define an impl for `Lift Color Color`.
