crates/nash-solve/tests/snapshots/inference__reflexive_lift_preserves_explicit_big_evidence.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Lift exposing (Lift)\ntrait Lift 'small 'big where\n    lift : 'small -> 'big\n    lower : 'big -> 'small\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\ntype Color = Red\ntype alias bigIdentity ('a : Big) = 'a -> 'a\nconcrete : Color -> Color\nconcrete x = lift x\nrigid : bigIdentity 'a\nrigid x = lift x\nsame : 'a -> 'a -> 'a\nsame x y = x\ninferred x = (rigid x, same x (lift x))\nexplicit : () -> ()\nexplicit x = lift x\npolymorphic : 'a -> 'a\npolymorphic x = lower x\ntype Box 'a = Box 'a\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Lift 'a 'a => Keep (Box 'a) where\n    keep x = x\nnested = keep (Box Red)\n"
---
[
    Impl {
        impl_: ImplRef {
            home: ModuleName {
                package: None,
                name: "Main",
            },
            key: ImplKey {
                trait_: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "Keep",
                },
                heads: [
                    Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Main",
                            },
                            name: "Box",
                        },
                        args: [
                            Var {
                                index: 0,
                                repr: ReprSet(
                                    1,
                                ),
                            },
                        ],
                    },
                ],
            },
        },
        type_args: [
            Located {
                region: Region {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 0,
                    },
                },
                value: Named {
                    reference: QualifiedName {
                        home: ModuleName {
                            package: None,
                            name: "Main",
                        },
                        name: "Color",
                    },
                    args: [],
                },
            },
        ],
        args: [
            ReflexiveLift {
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Main",
                            },
                            name: "Color",
                        },
                        args: [],
                    },
                },
            },
            Repr {
                trait_: Big,
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Main",
                            },
                            name: "Color",
                        },
                        args: [],
                    },
                },
            },
        ],
    },
    ReflexiveLift {
        typ: Located {
            region: Region {
                start: Position {
                    line: 0,
                    column: 0,
                },
                end: Position {
                    line: 0,
                    column: 0,
                },
            },
            value: Named {
                reference: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "Color",
                },
                args: [],
            },
        },
    },
    ReflexiveLift {
        typ: Located {
            region: Region {
                start: Position {
                    line: 0,
                    column: 0,
                },
                end: Position {
                    line: 0,
                    column: 0,
                },
            },
            value: Named {
                reference: QualifiedName {
                    home: ModuleName {
                        package: Some(
                            PackageName {
                                author: "nash",
                                project: "base",
                            },
                        ),
                        name: "Primitive",
                    },
                    name: "unit",
                },
                args: [],
            },
        },
    },
    ReflexiveLift {
        typ: Located {
            region: Region {
                start: Position {
                    line: 0,
                    column: 0,
                },
                end: Position {
                    line: 0,
                    column: 0,
                },
            },
            value: Var(
                "a",
            ),
        },
    },
    ReflexiveLift {
        typ: Located {
            region: Region {
                start: Position {
                    line: 0,
                    column: 0,
                },
                end: Position {
                    line: 0,
                    column: 0,
                },
            },
            value: Var(
                "a",
            ),
        },
    },
    ReflexiveLift {
        typ: Located {
            region: Region {
                start: Position {
                    line: 0,
                    column: 0,
                },
                end: Position {
                    line: 0,
                    column: 0,
                },
            },
            value: Var(
                "small",
            ),
        },
    },
]
