crates/nash-solve/tests/snapshots/inference__reflexive_lift_retains_big_evidence.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Lift exposing (Lift)\ntrait Lift 'small 'big where\n    lift : 'small -> 'big\n    lower : 'big -> 'small\nimpl Lift () () where\n    lift x = x\n    lower x = x\n\n\nmodule Main exposing (..)\nimport Lift exposing (Lift)\ntype Color = Red\ntype alias bigIdentity ('a : Big) = 'a -> 'a\nconcrete : Color -> Color\nconcrete x = lift x\nrigid : bigIdentity 'a\nrigid x = lift x\nsame : 'a -> 'a -> 'a\nsame x y = x\ninferred x = (rigid x, same x (lift x))\nexplicit : () -> ()\nexplicit x = lift x\ntype Box 'a = Box 'a\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Lift 'a 'a => Keep (Box 'a) where\n    keep x = x\nnested = keep (Box Red)\n"
---
[
    Impl {
        impl_: ImplRef {
            home: ModuleName {
                package: None,
                name: "Main",
            },
            key: ImplKey {
                trait_: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "Keep",
                },
                heads: [
                    Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Main",
                            },
                            name: "Box",
                        },
                        args: [
                            Var(
                                0,
                            ),
                        ],
                    },
                ],
            },
        },
        type_args: [
            Located {
                region: Region {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 0,
                    },
                },
                value: Named {
                    reference: QualifiedName {
                        home: ModuleName {
                            package: None,
                            name: "Main",
                        },
                        name: "Color",
                    },
                    args: [],
                },
            },
        ],
        args: [
            ReflexiveLift {
                trait_: QualifiedName {
                    home: ModuleName {
                        package: Some(
                            PackageName {
                                author: "nash",
                                project: "core",
                                version: "",
                                source: Compiler,
                                compilation: None,
                            },
                        ),
                        name: "Lift",
                    },
                    name: "Lift",
                },
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Main",
                            },
                            name: "Color",
                        },
                        args: [],
                    },
                },
            },
            Repr {
                trait_: Big,
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: None,
                                name: "Main",
                            },
                            name: "Color",
                        },
                        args: [],
                    },
                },
            },
        ],
    },
    Impl {
        impl_: ImplRef {
            home: ModuleName {
                package: Some(
                    PackageName {
                        author: "nash",
                        project: "core",
                        version: "",
                        source: Compiler,
                        compilation: None,
                    },
                ),
                name: "Lift",
            },
            key: ImplKey {
                trait_: QualifiedName {
                    home: ModuleName {
                        package: Some(
                            PackageName {
                                author: "nash",
                                project: "core",
                                version: "",
                                source: Compiler,
                                compilation: None,
                            },
                        ),
                        name: "Lift",
                    },
                    name: "Lift",
                },
                heads: [
                    Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: Some(
                                    PackageName {
                                        author: "nash",
                                        project: "core",
                                        version: "",
                                        source: Compiler,
                                        compilation: None,
                                    },
                                ),
                                name: "Builtin",
                            },
                            name: "unit",
                        },
                        args: [],
                    },
                    Named {
                        reference: QualifiedName {
                            home: ModuleName {
                                package: Some(
                                    PackageName {
                                        author: "nash",
                                        project: "core",
                                        version: "",
                                        source: Compiler,
                                        compilation: None,
                                    },
                                ),
                                name: "Builtin",
                            },
                            name: "unit",
                        },
                        args: [],
                    },
                ],
            },
        },
        type_args: [],
        args: [],
    },
    ReflexiveLift {
        trait_: QualifiedName {
            home: ModuleName {
                package: Some(
                    PackageName {
                        author: "nash",
                        project: "core",
                        version: "",
                        source: Compiler,
                        compilation: None,
                    },
                ),
                name: "Lift",
            },
            name: "Lift",
        },
        typ: Located {
            region: Region {
                start: Position {
                    line: 0,
                    column: 0,
                },
                end: Position {
                    line: 0,
                    column: 0,
                },
            },
            value: Named {
                reference: QualifiedName {
                    home: ModuleName {
                        package: None,
                        name: "Main",
                    },
                    name: "Color",
                },
                args: [],
            },
        },
    },
    ReflexiveLift {
        trait_: QualifiedName {
            home: ModuleName {
                package: Some(
                    PackageName {
                        author: "nash",
                        project: "core",
                        version: "",
                        source: Compiler,
                        compilation: None,
                    },
                ),
                name: "Lift",
            },
            name: "Lift",
        },
        typ: Located {
            region: Region {
                start: Position {
                    line: 0,
                    column: 0,
                },
                end: Position {
                    line: 0,
                    column: 0,
                },
            },
            value: Var(
                "a",
            ),
        },
    },
    ReflexiveLift {
        trait_: QualifiedName {
            home: ModuleName {
                package: Some(
                    PackageName {
                        author: "nash",
                        project: "core",
                        version: "",
                        source: Compiler,
                        compilation: None,
                    },
                ),
                name: "Lift",
            },
            name: "Lift",
        },
        typ: Located {
            region: Region {
                start: Position {
                    line: 0,
                    column: 0,
                },
                end: Position {
                    line: 0,
                    column: 0,
                },
            },
            value: Var(
                "small",
            ),
        },
    },
]
