crates/nash-solve/tests/snapshots/inference__repeated_impl_variables_reject_distinct_inferred_types.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nunitValue : unit\nunitValue = ()\ntype pairish 'a 'b = Both 'a 'b\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep (pairish 'a 'a) where\n    keep x = x\nroute x y = keep (Both x y)\nrejected = route unitValue (unitValue, unitValue)\n"
info: diagnostic
---
nash::type::missing_impl

  × No impl for `Keep (pairish unit ( unit, unit ))`.
    ╭─[Main.nash:10:12]
  9 │ route x y = keep (Both x y)
 10 │ rejected = route unitValue (unitValue, unitValue)
    ·            ──┬──
    ·              ╰── required by `route`
    ╰────
  help: Available impl heads:

            (pairish 'a0 'a0)

        Import or define an impl for `Keep (pairish unit ( unit, unit ))`.
