crates/nash-solve/tests/snapshots/inference__repeated_impl_variables_wait_without_equating_inferred_types.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntype pairish 'a 'b = Both 'a 'b\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep (pairish 'a 'a) where\n    keep x = x\nroute x y = keep (Both x y)\naccepted = route () ()\n"
---
accepted : forall a b. (Keep (pairish a b), FromUnit a, FromUnit b) => pairish a b
route : forall a b. Keep (pairish a b) => a -> b -> pairish a b
